@@ -131,19 +131,7 @@
 			<version>3.5</version>
 		</dependency>
 
-
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.10.4</version>
-		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
-			<version>2.1.5</version>
-		</dependency>
-		 -->
+	
 	</dependencies>
 
 	<build>
@@ -161,7 +149,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>
-						-Xms256m -Xmx512m -XX:MaxPermSize=128m
 						-Dfile.encoding=UTF-8
 					</argLine>
 				</configuration>
